<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="csp_transfer_crosspusher_constant_struct" Id="{8ea23b3a-e410-4e54-baf9-fccbcefd94ab}">
    <Declaration><![CDATA[TYPE csp_transfer_crosspusher_constant_struct :
STRUCT
	(*BELT Info*)
	MIN_VELOCITY_MMpSEC:						LREAL := 100;
	MAX_VELOCITY_MMpSEC:						LREAL := 10000;
	MAX_ACCELERATION_MMpSEC2:					LREAL := 100000;
	MAX_DECELERATION_MMpSEC2:					LREAL := 100000;
	MAX_JERK_MMpSEC3:							LREAL := 1000000;
	RUNNING_ACCELERATION_MMMpSEC2:				LREAL := 30000;
	RUNNING_DECELERATION_MMpSEC2:				LREAL := 30000;
	MAX_FOLLOWING_ERROR_MM:						LREAL := 1000;
	
	RUNNING_JERK_MMpSEC3:						LREAL := 1000000;
	MOTOR_MAX_VELOCITY_DEGPS:					LREAL := 9600;
	MOTOR_MAX_ACCELERATION_DEGPS2:				LREAL := 4800;
	MOTOR_MAX_DECELERATION_DEGPS2:				LREAL := 4800;
	MOTOR_MAX_JERK_DEGPS3:						LREAL := 100000000; 
	MOTOR_MAX_FOLLOWING_ERROR_DEG:				LREAL := 2;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>