<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="csp_transfer_crosspusher_loader_clear_status" Id="{a89a59a9-a175-0594-0fd2-561d3d3dc809}">
    <Declaration><![CDATA[TYPE csp_transfer_crosspusher_loader_clear_status :
(
	NONE							:= 0,
	NOT_CLEAR						:= 1,
	CLEAR							:= 2	
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>