<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="csp_transfer_crosspusher_reject_status_enum" Id="{b4296e76-bf5f-43f7-9e09-152cd06319aa}">
    <Declaration><![CDATA[TYPE csp_transfer_crosspusher_reject_status_enum :
(		
	CSP_TRANSFER_CROSSPUSHER_REJECT_STATUS_START							:= 0,
	CSP_TRANSFER_CROSSPUSHER_REJECT_STATUS_DWELL_TRANSFER_VM				:= 5,
	CSP_TRANSFER_CROSSPUSHER_REJECT_STATUS_DISENGAGE_AXES					:= 20,
	CSP_TRANSFER_CROSSPUSHER_REJECT_STATUS_GEAR_FOLLOWER					:= 30,
	CSP_TRANSFER_CROSSPUSHER_REJECT_STATUS_MOVE_TO_REJECT_POS				:= 40,
	CSP_TRANSFER_CROSSPUSHER_REJECT_STATUS_VERIFY_HORIZONTAL_POS			:= 50,
	CSP_TRANSFER_CROSSPUSHER_REJECT_STATUS_UNGEAR_FOLLOWER					:= 51,
	CSP_TRANSFER_CROSSPUSHER_REJECT_STATUS_MOVE_FOLLOWER					:= 52,
	CSP_TRANSFER_CROSSPUSHER_REJECT_STATUS_VERIFY_FOLLOWER_POS				:= 53,
	CSP_TRANSFER_CROSSPUSHER_REJECT_STATUS_REJECT_STACK 					:= 60,
	CSP_TRANSFER_CROSSPUSHER_REJECT_STATUS_VERIFY							:= 80,
	CSP_TRANSFER_CROSSPUSHER_REJECT_STATUS_RETURN_HORIZONTAL				:= 90,
	CSP_TRANSFER_CROSSPUSHER_REJECT_STATUS_HORIZONTAL_RETURNING				:= 91,
	CSP_TRANSFER_CROSSPUSHER_REJECT_STATUS_RETURN_FOLLOWER					:= 92,
	CSP_TRANSFER_CROSSPUSHER_REJECT_STATUS_FOLLOWER_RETURNING				:= 93,
	CSP_TRANSFER_CROSSPUSHER_REJECT_STATUS_VERIFY_AT_LOAD					:= 95,
	CSP_TRANSFER_CROSSPUSHER_REJECT_STATUS_RUN_AXES							:= 100, 
	CSP_TRANSFER_CROSSPUSHER_REJECT_STATUS_DONE								:= 120,
	CSP_TRANSFER_CROSSPUSHER_REJECT_STATUS_WAITING							:= 130,
	CSP_TRANSFER_CROSSPUSHER_REJECT_STATUS_EMERGENCY_STOP					:= 150,
	CSP_TRANSFER_CROSSPUSHER_REJECT_STATUS_EMERGENCY_STOP_ENABLE			:= 160,
	CSP_TRANSFER_CROSSPUSHER_REJECT_STATUS_EMERGENCY_STOP_GOTO				:= 170,
	CSP_TRANSFER_CROSSPUSHER_REJECT_STATUS_EMERGENCY_STOP_FOLLOWER_MOVE		:= 180
) := CSP_TRANSFER_CROSSPUSHER_REJECT_STATUS_START;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>